--- a/styles.css
+++ b/styles.css
@@ -1,226 +1,200 @@
-* {
-    font-family: Impact;
-    letter-spacing: 1px;
+*,
+*::after,
+*::before {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 body {
+    font-family: 'Gill Sans MT', sans-serif;
+    letter-spacing: 1px;
     background-color: #44b7d0;
     background-image: url("data:image/svg+xml,%3Csvg width='84' height='48' viewBox='0 0 84 48' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 0h12v6H0V0zm28 8h12v6H28V8zm14-8h12v6H42V0zm14 0h12v6H56V0zm0 8h12v6H56V8zM42 8h12v6H42V8zm0 16h12v6H42v-6zm14-8h12v6H56v-6zm14 0h12v6H70v-6zm0-16h12v6H70V0zM28 32h12v6H28v-6zM14 16h12v6H14v-6zM0 24h12v6H0v-6zm0 8h12v6H0v-6zm14 0h12v6H14v-6zm14 8h12v6H28v-6zm-14 0h12v6H14v-6zm28 0h12v6H42v-6zm14-8h12v6H56v-6zm0-8h12v6H56v-6zm14 8h12v6H70v-6zm0 8h12v6H70v-6zM14 24h12v6H14v-6zm14-8h12v6H28v-6zM14 8h12v6H14V8zM0 8h12v6H0V8z' fill='%2361dbe1' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
 }
 
 
-/* INDEX */
+/*? INDEX */
 
-.top-container {
-    color: rgb(255, 255, 255);
-    display:flex;
-    flex-wrap: wrap;
-    justify-content:center;
-}
-
+/* HEADER */
 .header {
-    flex-basis: 85%;
+    margin-top: 1rem;
+    border-bottom: .2rem solid white;
     background-color: #000000;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%2300323a' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    position: relative;
-    z-index: 40;  
-    border-bottom: 4px solid white;
 }
 
-.header h1 {
+.header-title {
+    padding: .3em;
+    color: rgb(255, 255, 255);
     text-align: center;
-    letter-spacing: 15px;
+    letter-spacing: 1rem;
     font-style: italic;
-    font-size: 50px;
-    margin-top: 15px;
-    margin-bottom: 18px;
+    font-size: 3rem;
+    font-family: Impact;
 }
 
-.header h2 {
+.header-subtitle {
+    padding: .5em;
+    color: rgb(255, 255, 255);
     text-align: center;
     letter-spacing: 3px;
-    font-family: 'Gill Sans MT';
-    margin-top: 10px;
 }
 
-.navigation {
-    flex-basis: 85%;
+/* NAVIGATION MENU */
+.nav-menu {
+    display: flex;
+    justify-content: space-evenly;
     background-color: #000949;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23004e5a' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    position: relative;
-    z-index: 1;
-    top: -20px;
 }
 
-.navigation__list {
-    margin-top: 30px;
-}
-
-.navigation__list__ul {
-    list-style-type: none;
+.nav-menu-item {
+    padding: .6em;
     text-align: center;
-    padding-left: 0px;
-}
-
-.navigation__list li, .navigation__list__levels li {
-    display: inline;
-    text-align: center;
-    margin-left: 30px;
-    margin-right: 30px;
-    padding: 15px;  
     color: white;
     letter-spacing: 2px;
-}  
-
-.navigation__list a, .navigation__list__levels a{
     text-decoration: none;
-    color: white;
-    letter-spacing: 2px;
+    font-family: Impact;
 }
 
-.navigation__list a:hover, .navigation__list__levels a:hover {
-    border-bottom: 2px solid rgb(255, 58, 173);
-    padding-bottom: 8px;
+.nav-menu-item:hover {
     color: rgb(255, 58, 173);
-    transition: color .4s ease-in-out;
+    transition: color .3s ease-in-out;
 }
 
-.text-container {   
+.nav-item-selected {
+    color: rgb(255, 58, 173);
+}
+
+/* INFORMATION SECTION */
+.info-section {   
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-}
-
-.text-container__section {
+    width: 85%;
+    padding: 1em;
+    margin: 1rem auto;
+    border-radius: 1rem ;
+    box-shadow: 2px 2px 20px;
     background-color: rgba(255, 255, 255, 0.425);
-    flex-basis: 85%;
-    border-radius: 20px 20px ;
 }
 
-.text-container__section h3 {
+.info-section-title {
+    margin-bottom: 1em;
+    flex-basis: 80%;
+    text-align: justify;
     font-family: Gill Sans MT;
-    text-align: center;
-    padding: 0px 20px;
 }
 
-.text-container__section p {
-    font-family: Gill Sans MT;
-    font-size: large;
-    padding: 25px 45px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+.info-section-text {
+    padding: 1em;
     border-top: 2px solid white;
+    font-family: Gill Sans MT;
+    line-height: 1.3em;
 }
 
-.text-container__section p a {
-    text-decoration-style: none;
+.info-section-text a {
     margin-left: 20px;
-    color: inherit;
+    text-decoration: none;
     color: rgb(255, 58, 173);
 }
 
-.text-container__section p a:hover {
+.info-section-text a:hover {
     border-bottom: 2px solid rgb(255, 58, 173);
 }
 
+/* FOOTER */
 .flex-footer {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
+    margin-bottom: 1rem;
 }
 
-.flex-footer__list {
-    flex-basis: 85%;
-    list-style-type: none;
-}
-
-.flex-footer__list li {
-    text-align: center;
-}
-
-.flex-footer__list a {
+.flex-footer a {
     letter-spacing: 2px;
-    color: inherit;
     text-decoration: none;
     color: rgb(255, 58, 173);
 }
 
-.flex-footer__list :nth-child(2) a:hover {
+.flex-footer a:hover {
     border-bottom: 2px solid rgb(255, 58, 173);
 }
-.flex-footer__list img {
-    height: 100px;
-    width: 100px;
-}
 
-.flex-footer__list :first-child img:hover {
-    filter: drop-shadow(4px 4px 4px rgb(255, 58, 173));
-}
 
-/* LEVEL 1 */
+/*? LEVELS */
 
-.navigation-levels {
-    display: flex;
-    justify-content: center;
-    background-color: #000949;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23004e5a' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
-}
-
+/* GAME */
 .level-container {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
-}
-
-.level-container__all {
+    width: 1040px;
+    padding: 1.25rem;
+    margin: 1.25rem auto;
+    box-shadow: 2px 2px 20px;
+    border-radius: 1rem;
     text-align: center;
     background-color: rgba(255, 255, 255, 0.425);
-    border-radius: 20px 20px;
-    padding: 20px 20px;
-    margin-top: 20px;
 }
 
-.level-container__all img{
+.image1 {
+    width: 1000px;
+    height: 660px;
+    border: 3px solid rgb(255, 58, 173);
     cursor: pointer;
-    border: 3px solid rgb(255, 58, 173)
 }
 
-.level-container__all h2 {
-    letter-spacing: 2px;
+.image2 {
+    width: 1000px;
+    height: 694px;
+    border: 3px solid rgb(255, 58, 173);
+    cursor: pointer;
 }
 
-.level-container__all i{
+.level-story {
+    padding: 1em;
+}
+
+.open-list-button {
+    padding: .5em;
+}
+.open-list-button i {
+    margin-right: .5em;
     color:rgb(255, 58, 173);
-}
-
-.level-container__all i:hover{
     cursor: pointer;
 }
 
-.aside {
+.open-list-button i:hover {
+    color: #fff;
+}
+
+/* CHARACTERS LIST */
+.char-list-container {
+    position: absolute;
+    top: 17.5rem;
+    left: -25rem;
+    padding: 1em;
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
     background-color: rgba(255, 58, 173, 0.89);
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-    padding: 15px;
-    position:absolute;
-    top: 280px;
-    left: -400px;
     transition: left .3s linear;
 }
 
-.aside i {
+.char-list-container i {
     display: block;
     text-align: end;
+    font-size: 2rem;
     cursor: pointer;
-    font-size: larger;
 }
 
-.aside__list {
-    font-size: larger;
+.char-list-container i:hover {
+    color: #fff;
+}
+
+.char-list {
+    padding: 1.2em;
+    font-size: 1.2rem;
 }
 
 .showList {
@@ -232,39 +206,39 @@ body {
     text-decoration: 2px line-through;
 }
 
+/* SIGNS */
 .itemFoundSignStyles {
-    background-color: rgba(173, 30, 255, 0.795);
     position: absolute;
-    font-size: 25px;
-    padding: 15px;
-    border-radius: 25px;
-    top:50%;
-    left:30%; 
+    top: 50%;
+    left: 30%; 
+    padding: .6em;
+    border-radius: 1em;
+    font-size: 1.8rem;
+    background-color: rgba(173, 30, 255, 0.795);
 }
 
-.play {
-    text-align: center;
-    line-height:350px;
-    color: white;
+.win-sign {
     position:absolute;
+    top: -1000px;
+    width: 1000px;
     height: 350px;
-    width: 1006px;
-    font-size: 150px;
+    font-size: 9rem;
+    line-height: 21rem;
+    text-align: center;
+    color: #fff;
     background-color:rgba(255, 58, 173, 0.712);
-    top:-1000px;
 }
 
-.play i {
+.win-sign i {
     color: white;
-    font-size: 60px;
+    font-size: 3.75rem;
 }
 
-.play i:hover {
-    color:rgb(0, 0, 0)
+.win-sign i:hover {
+    color: rgb(0, 0, 0)
 }
 
 .win {
-    top:40%;
+    top: 40%;
     transition: top .5s ease-out;    
-    
 }
